Fix getFirst